[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "documentation"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "Bradley Fay", email = "bradley.fay@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = []

[project.urls]
Documentation = "https://github.com/bradleyfay/ml-leadership#readme"
Issues = "https://github.com/bradleyfay/ml-leadership/issues"
Source = "https://github.com/bradleyfay/ml-leadership"

[tool.hatch.version]
path = "src/documentation/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/documentation tests}"

[tool.coverage.run]
source_pkgs = ["documentation", "tests"]
branch = true
parallel = true
omit = [
  "src/documentation/__about__.py",
]

[tool.coverage.paths]
documentation = ["src/documentation", "*/documentation/src/documentation"]
tests = ["tests", "*/documentation/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
